plugins {
    alias(libs.plugins.protobuf) apply false
}

allprojects {
    group = 'com.relang'
    version = '1.0-SNAPSHOT'

    repositories {
        mavenCentral()
    }
}

subprojects {
    apply plugin: 'java'

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile) {
        options.compilerArgs << "-parameters"
    }

    test {
        useJUnitPlatform()
    }
}
